--- a/index.html
+++ b/index.html
@@ -10,23 +10,28 @@
 		<header>
 			<p>El juego de mesa más vendido de la historia</p>
 		</header>
+
 		<section class="antes">
 			<h4><b>Antes</b></h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto vitae, minima reiciendis voluptas accusantium laborum voluptatibus sapiente minus possimus aspernatur vero sit ut numquam corporis nostrum, consequatur, cumque in labore.</p>
-			<img src="36FD443050569047F59DA7A840BE1C03.jpg">
+			<img class="img2" src="36FD443050569047F59DA7A840BE1C03.jpg">
 		</section>
 		<section class="monopoly">
 			<h2><b>Monopoly</b></h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime reprehenderit eaque esse, recusandae, repellat possimus eligendi neque eius ea quo assumenda, hic vero qui ducimus. Voluptate rem deleniti, enim alias!</p>
+
 		</section>
 		<section class="ahora">
 			<h4><b>Ahora</b></h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam corporis quam magni atque esse nemo accusamus suscipit et commodi maiores repellat eius dignissimos architecto reprehenderit unde omnis, placeat possimus deleniti!</p>
-			<img src="s-l200.jpg">
+			<img class="img1" src="s-l200.jpg">
 		</section>
+		
 		<footer>
-			<h4><b>Con información de Gráffica</b></h4>
+			<h4><b>Con información de <a href="#">Gráffica</a></b></h4>
 		</footer>
+		
+		
 	</div>
 </body>
 </html>
